@@ -1,5 +1,14 @@
 2005-07-31  Bruno Haible  <bruno@clisp.org>
 
+	* lock.h (gl_lock_initializer): New macro.
+	(gl_lock_define_initialized): Use it.
+	(gl_rwlock_initializer): New macro.
+	(gl_rwlock_define_initialized): Use it.
+	(gl_recursive_lock_initializer): New macro.
+	(gl_recursive_lock_define_initialized): Use it.
+
+2005-07-31  Bruno Haible  <bruno@clisp.org>
+
 	Avoid const-cast.
 	* dcigettext.c (DCIGETTEXT): Change type of 'dirname' to const char *.
 	Use an auxiliary variable 'resolved_dirname' of type 'char *'.
